# sanbox

./: .gitignore  README.md
NandGame/: 7_NandGame - TwoBitsAdder.pngng  nandgame_solutions_description.txt
appviewer/: .gitignore  Makefile  README.md  procmemproxy.py  requirements.txt  sinusoid.cpp  sinusoid_memproxy.py  sinusoid_monitor.py
megadrive_mod_midi/: readme.md
megadrive_mod_midi/genmdm/102/: GENMDM_102.cpp.hex  GENMDM_102.txt
megadrive_mod_midi/genmdm/103-right_fix_not_sure/: GENMDM_103.cpp.hex  GENMDM_103.txt
megadrive_mod_midi/genmdm/test1_report/: genmdm_sprint1.md  lmms_test_project.mmpz
static_analysis/: README.md
swim_automation/: test_swim_automation.py
test_speech_recognition/: .gitignore  requirements.txt  test_speech_recognition.py
tutorial_tetris_python/: .gitignore  README.md  tutorial_tetris_python.py
vscode_c_cplusplus/: README.md
vscode_c_cplusplus/vscode_ccplusplus_ext_helloworld/: helloworld.cpp
vscode_c_cplusplus/vscode_cmake_ext_helloworld/: CMakeLists.txt
